# corpus-ipc

./: .codacy.yml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  REVIEW.md
.github/workflows/: ci.yml
.kilo/: kilo.json
.kilo/plans/: 1782353024353-clean-legacy-naming.md
.mimocode/: .cron-lock
.mimocode/plans/: 1783391483297-crisp-comet.md
docs/: README.md
docs/plans/: corpus-ipc-boundary-plan.md
src/: error.rs  lib.rs  models.rs  rust_backend.rs  trait_def.rs  zmq_backend.rs
