[package]
name = "corpus-ipc"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Inter-Process Communication (IPC) library for bridging Rust to external compute engines via ZeroMQ."
repository = "https://github.com/Limen-Neural/corpus-ipc"  # <-- TODO: Update this to the correct URL
keywords = ["ipc", "zmq", "ffi", "hpc", "compute"]
categories = ["science", "network-programming", "api-bindings"]
exclude = ["docs/"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
zmq = { version = "0.10", optional = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde_json = "1.0"

[features]
default = []
zmq = ["dep:zmq"]
